# my-kotlin-llama

./: README.md  build.gradle.kts  gradle.properties  gradlew  jni.cpp  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/org/nehuatl/sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/nehuatl/sample/: ChatScreen.kt  CloudAIConfig.kt  CloudAIEvent.kt  CloudAIProvider.kt  CloudAIState.kt  GenerationState.kt  HelpText.kt  LlamaHelper.kt  MainActivity.kt  MainViewModel.kt  MatrixChatBackground.kt  VoskRecognizer.kt
app/src/main/java/org/nehuatl/sample/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/nehuatl/sample/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llamaCpp/: README.md  build.gradle.kts
llamaCpp/src/androidTest/java/org/nehuatl/llamacpp/: ExampleInstrumentedTest.kt
llamaCpp/src/main/cpp/: CMakeLists.txt
llamaCpp/src/main/cpp/lib/: ggml-quants.c  ggml.c  llama-graph.cpp  llama-sampler.cpp  llama.h  rn-mtmd.hpp
llamaCpp/src/main/cpp/lib/common/: common.cpp  common.h
llamaCpp/src/main/cpp/lib/tools/mtmd/: clip.cpp  mtmd-audio.cpp  mtmd-helper.cpp  mtmd.cpp
llamaCpp/src/main/java/org/nehuatl/llamacpp/: LLamaContext.kt  LlamaAndroid.kt  LlamaHelper.kt
llamaCpp/src/test/java/org/nehuatl/llamacpp/: ExampleUnitTest.kt
scripts/: sync_llamacpp.sh
